# tactile-sensing

./: .gitignore  README.md  a.cpp  asd.cpp  boardfixes.txt  moveitidk.py
arduino/: README.md  plot_log.py  reader.py  sensor_plotter.py
arduino/AnalogReader/: AnalogReader.ino
arduino/DacReader/: DacReader.ino
arduino/SensorReader/: SensorReader.ino
data/: log1.csv
pcb/: .gitignore  README.md
pcb/flex-grid/: flex-grid.kicad_pcb  flex-grid.kicad_prl  flex-grid.kicad_pro  flex-grid.kicad_sch  sensor.kicad_sch
pcb/lattice-board/: envSensor.kicad_sch  lattice-board.kicad_pcb  lattice-board.kicad_prl  lattice-board.kicad_pro  lattice-board.kicad_sch  sensor.kicad_sch  sensorGroup.kicad_sch
pcb/lattice-row-nine/: lattice-row-nine.kicad_pcb  lattice-row-nine.kicad_prl  lattice-row-nine.kicad_pro  lattice-row-nine.kicad_sch  sensor.kicad_sch
ros/: README.md  arduino_node.py  launch_file.py  probe_node.py
ros2/: .gitignore  README.md  README_old.md  notes.txt  robot_calibration.yaml
ros2/src/simple_move/: CMakeLists.txt  package.xml
ros2/src/simple_move/src/: exc_simple_move.cpp
rtde/: .gitignore  README.md  control.py  control2.py  planner.py  servoj.py
script/: .gitignore  arduino_node.py  arduino_plot_log.py  down_sample.py  lattice_map.py  lattice_plot.py  lattice_print.py  maze_alg.py  maze_gen.py  plot_log.py  probe_plot.py  probe_print.py  row_nine_plot.py  sample.py
scripting/: sample.py
stm32/: .gitignore  README.md
tools/: line_plotter.py  logger.py  plotter.py  serial_manager.py  test.py
ursim/: .gitignore  README.md  launch.sh
(+298 files in other folders)
